--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/cors": "^2.8.12",
-    "nodemon": "^2.0.13",
-    "typescript": "^4.4.4"
+    "nodemon": "^2.0.13"
   },
   "dependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "aws-sdk": "^2.1008.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "hls-server": "^1.5.0"
+    "typescript": "^4.4.4"
   },
-  "engines": {"node": "16.10"}
+  "engines": {
+    "node": "16.1.0"
+  }
 }
