--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "tsc",
     "dev": "nodemon --watch src -e ts --exec \"npm exec tsc && node ./dist/main.js\" --delay 2",
-    "start": "npm exec tsc && node ./dist/main.js"
+    "start": "node ./dist/main.js"
   },
   "author": "",
   "license": "ISC",
