--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/morgan": "^1.9.3",
     "nodemon": "^2.0.13"
   },
   "dependencies": {
@@ -21,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "typescript": "^4.4.4"
   },
   "engines": {
